[tool.poetry]
name = "nonebot-plugin-chatglm-plus"
version = "0.1.2"
description = "人性化的ChatGLM插件，使用智谱API，支持上下文"
authors = ["【夜风】NightWind <2125714976@qq.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "nonebot_plugin_chatglm_plus"}]
homepage = "https://github.com/XTxiaoting14332/nonebot-plugin-chatglm-plus"
repository = "https://github.com/XTxiaoting14332/nonebot-plugin-chatglm-plus"
documentation = "https://github.com/XTxiaoting14332/nonebot-plugin-chatglm-plus#README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = ">=2.2.0"
httpx = ">=0.22.0"
ujson = ">=5.0.0"
nonebot-plugin-session = ">=0.2.3"
PyJWT = ">=2.3.0"
nonebot-plugin-localstore = ">=0.6.0"


[tool.nonebot]
plugins = ["nonebot_plugin_localstore"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
